# job-bot

./: .env.example  .gitignore  CLAUDE.md  MILESTONES.md  Makefile  PLAN.md  PRD.md  README.md  WORKFLOW.md  jobs.json  latest.json  pyproject.toml
data/: base_cv.example.md  base_cv.md  config.example.yaml  config.yaml  debug_desc.db  profile.compiled.yaml  profile.example.yaml  profile.yaml
docs/: claude_code_handoff.md  test_coverage_gaps.md  ui_design_study.md
prompts/: application_package.md  cover_letter.md  cv_tailor.md  match_score.md  screener.md
scheduling/: com.philipp.jobbot.apply.plist  com.philipp.jobbot.digest.plist  com.philipp.jobbot.inbox.plist  com.philipp.jobbot.scrape.plist
scripts/: backfill_company.py  check-secrets.sh  compare_score_runs.sql  gen_downgrades_review.py  rescore_from_feedback.py  setup.sh  smoke_test_score_floor.py
tests/: test_already_applied_guard.py  test_application_package.py  test_apply_adapter_registry.py  test_apply_channel.py  test_apply_channel_wiring.py  test_apply_expired_detection.py  test_apply_post_submit_verification.py  test_apply_salary.py  test_apply_supervised_mode.py  test_dashboard_applications_table.py  test_dashboard_feedback_rescore.py  test_dashboard_funnel.py  test_dashboard_in_progress.py  test_dashboard_sort.py  test_e2e_user_journeys.py  test_email_apply_channel.py  test_enrichment_backfill.py  test_enrichment_company_persistence.py  test_export_json_destination.py  test_find_job_goal_e2e.py  test_housekeep.py  test_inbox_scanner_imap.py  test_indeed_scraper.py  test_journey4_outcomes_contracts.py  (+20 more)
(+78 files in other folders)
